--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 01:05:06 2018</p>
+         Last Run: Tue Nov 27 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>4</td>
-                        <td>72</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>W</td>
-                        <td>5</td>
+                        <td>WSW</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,23 +46,23 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>4</td>
-                        <td>73</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>W</td>
-                        <td>5</td>
+                        <td>WSW</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-4</td>
-                        <td>-8</td>
+                        <td>-7</td>
                         <td>4</td>
-                        <td>76</td>
+                        <td>77</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>W</td>
-                        <td>6</td>
+                        <td>8</td>
+                        <td>WSW</td>
+                        <td>5</td>
                      </tr>
                   </tbody>
                </table>
@@ -91,7 +91,7 @@
                "data":[
                  "-7",
                  "-7",
-                 "-8"
+                 "-7"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "72",
-                 "73",
-                 "76"
+                 "75",
+                 "75",
+                 "77"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "5",
-                 "5",
-                 "6"
+                 "7",
+                 "6",
+                 "5"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 01:05:06 2018</p>
+         Last Run: Tue Nov 27 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -253,27 +253,27 @@
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>92</td>
+                        <td>93</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>19</td>
-                        <td>71</td>
+                        <td>20</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>92</td>
+                        <td>93</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>20</td>
-                        <td>71</td>
+                        <td>21</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNE</td>
@@ -376,8 +376,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "34",
-                 "19",
-                 "20"
+                 "20",
+                 "21"
                ]
              },
              {
@@ -387,8 +387,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "73",
-                 "71",
-                 "71"
+                 "70",
+                 "70"
                ]
              },
              {
@@ -397,8 +397,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "92",
-                 "92",
+                 "93",
+                 "93",
                  "92"
                ]
              }
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 01:05:06 2018</p>
+         Last Run: Tue Nov 27 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -485,14 +485,14 @@
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>-4</td>
-                        <td>-7</td>
+                        <td>-3</td>
+                        <td>-6</td>
                         <td>7</td>
                         <td>66</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNE</td>
-                        <td>65</td>
+                        <td>66</td>
                      </tr>
                   </tbody>
                </table>
@@ -521,7 +521,7 @@
                "data":[
                  "-7",
                  "-7",
-                 "-7"
+                 "-6"
                ]
              },
              {
@@ -533,7 +533,7 @@
                "data":[
                  "-4",
                  "-4",
-                 "-4"
+                 "-3"
                ]
              }
            ]
@@ -614,7 +614,7 @@
                "data":[
                  "84",
                  "76",
-                 "65"
+                 "66"
                ]
              }
            ]
