--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 02:05:02 2018</p>
+         Last Run: Tue Nov 27 03:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>4</td>
-                        <td>75</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>7</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -58,7 +58,7 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>4</td>
-                        <td>77</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "74",
                  "75",
-                 "75",
-                 "77"
+                 "78"
                ]
              },
              {
@@ -182,7 +182,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "7",
+                 "6",
                  "6",
                  "5"
                ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 02:05:02 2018</p>
+         Last Run: Tue Nov 27 03:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -248,8 +248,8 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>34</td>
-                        <td>73</td>
+                        <td>39</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
@@ -259,11 +259,11 @@
                         <td>02:00 PM</td>
                         <td>Overcast</td>
                         <td>-3</td>
-                        <td>-6</td>
-                        <td>20</td>
-                        <td>70</td>
+                        <td>-7</td>
+                        <td>22</td>
+                        <td>73</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>N</td>
                         <td>93</td>
                      </tr>
@@ -273,11 +273,11 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>21</td>
-                        <td>70</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNE</td>
-                        <td>92</td>
+                        <td>93</td>
                      </tr>
                   </tbody>
                </table>
@@ -305,7 +305,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-6",
-                 "-6",
+                 "-7",
                  "-6"
                ]
              },
@@ -375,8 +375,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "34",
-                 "20",
+                 "39",
+                 "22",
                  "21"
                ]
              },
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "77",
                  "73",
-                 "70",
-                 "70"
+                 "73"
                ]
              },
              {
@@ -399,7 +399,7 @@
                "data":[
                  "93",
                  "93",
-                 "92"
+                 "93"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 02:05:02 2018</p>
+         Last Run: Tue Nov 27 03:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -460,39 +460,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Overcast</td>
-                        <td>-4</td>
-                        <td>-7</td>
-                        <td>18</td>
-                        <td>75</td>
-                        <td>0</td>
-                        <td>6</td>
-                        <td>NNE</td>
-                        <td>84</td>
-                     </tr>
-                     <tr>
-                        <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>-4</td>
-                        <td>-7</td>
+                        <td>-5</td>
+                        <td>-8</td>
                         <td>16</td>
-                        <td>70</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NNE</td>
                         <td>76</td>
                      </tr>
                      <tr>
-                        <td>02:00 PM</td>
+                        <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>-3</td>
-                        <td>-6</td>
-                        <td>7</td>
-                        <td>66</td>
+                        <td>-4</td>
+                        <td>-7</td>
+                        <td>15</td>
+                        <td>73</td>
+                        <td>0</td>
+                        <td>6</td>
+                        <td>NE</td>
+                        <td>65</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>-4</td>
+                        <td>-7</td>
+                        <td>6</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>NNE</td>
-                        <td>66</td>
+                        <td>NE</td>
+                        <td>55</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,9 +519,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-8",
                  "-7",
-                 "-7",
-                 "-6"
+                 "-7"
                ]
              },
              {
@@ -531,9 +531,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "-5",
                  "-4",
-                 "-4",
-                 "-3"
+                 "-4"
                ]
              }
            ]
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "18",
                  "16",
-                 "7"
+                 "15",
+                 "6"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "75",
-                 "70",
-                 "66"
+                 "78",
+                 "73",
+                 "68"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "84",
                  "76",
-                 "66"
+                 "65",
+                 "55"
                ]
              }
            ]
